--- a/appveyor.yml
+++ b/appveyor.yml
@@ -64,7 +64,7 @@ after_build:
             Add-Content "$env:USERPROFILE\.git-credentials" "https://$($env:access_token):x-oauth-basic@github.com`n"
             git config --global user.email $env:op_build_user_email
             git config --global user.name $env:op_build_user
-            git clone https://github.com/jonathanvdc/flame.git -b gh-pages origin_site -q
+            git clone https://github.com/%APPVEYOR_REPO_NAME%.git -b gh-pages origin_site -q
             Copy-Item origin_site/.git Documentation/_site -recurse
             CD Documentation/_site
             git add -A 2>&1
